# app-sec

./: .docker_db_key  .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NATIVE_RUST_MIGRATION.md  RBAC_IMPLEMENTATION_PLAN.md  README.md  TODO.md  build.sh  config.toml  count_loc.sh  data_dev.db  dev.sh  docker-compose.yml  generate-certs.sh  session-ses_4516.md
api-translator/: Cargo.toml  build.rs
api-translator/locales/: en.yml
api-translator/src/: lib.rs
api-types/: Cargo.toml
api-types/src/: enums.rs  lib.rs  requests.rs  responses.rs  validation.rs
backend/: .gitignore  Cargo.toml  build.rs  data.db
backend/proto/: api.proto
backend/src/: api.rs  config.rs  email.rs  lib.rs  main.rs
backend/src/api/: admin.rs  auth.rs  auth_extractor.rs  comments.rs  counter.rs  health.rs  login.rs  logout.rs  password_reset.rs  posts.rs  ratings.rs  register.rs  utils.rs  verify_email.rs
backend/src/db/: comments.rs  email_verification_tokens.rs  mod.rs  password_reset_tokens.rs  posts.rs  ratings.rs  user_data.rs  user_login.rs  user_sessions.rs
dioxus/: Cargo.toml  Dioxus.toml  data_dev.db  package-lock.json  package.json  tailwind.config.js
dioxus/assets/: main.css  tailwind.css  tailwind.generated.css
dioxus/src/: api.rs  db.rs  email.rs  main.rs
dioxus/src/components/: auth_layout.rs  back_button.rs  button.rs  dark_mode_toggle.rs  link_button.rs  mod.rs  navbar.rs  text_input.rs
dioxus/src/pages/: dashboard.rs  forgot_password.rs  login.rs  mod.rs  register.rs  reset_password.rs  verify_email.rs
documentation/: .gitignore  account.json  email-verify-feat.md  email-verify-implementation.md  manifest.json  projects.json  registration-module.md
documentation/latex/: generate.sh  main.aux  main.out  main.tex  main.toc  metadata.json
documentation/latex/00-preamble/: main.tex
documentation/latex/01-introduction/: main.tex
documentation/latex/02-component-description/: main.tex
documentation/latex/03-requirements/: main.tex
documentation/latex/04-architecture/: main.tex
documentation/latex/05-database/: main.tex
documentation/latex/06-uml-diagrams/: 04_Login_sequence-diagrams-spec.md  main.tex  sequence-diagrams-spec.md
documentation/latex/07-security/: main.tex
documentation/latex/08-api-reference/: main.tex
documentation/latex/09-implementation/: main.tex
documentation/latex/10-usage/: main.tex
documentation/latex/11-version-history/: main.tex
documentation/latex/12-conclusions/: main.tex
documentation/latex/files/: main.tex  metadata.json
documentation/latex/files/sections/: 00-preamble.tex  01-introduction.tex  02-component-description.tex  03-requirements.tex  04-architecture.tex  05-database.tex  07-security.tex  08-api-reference.tex  09-implementation.tex  10-usage.tex  api-reference.tex  architecture.tex  requirements.tex  uml-diagrams.tex  usage.tex
documentation/latex/sections/: 00-preamble.tex  01-introduction.tex  03-requirements.tex  04-architecture.tex  05-database.tex  06-uml-diagrams.tex  07-security.tex  09-implementation.tex  10-usage.tex  11-version-history.tex
documentation/projects/f712c7f2-180b-4362-bb76-98a19ea4f55a/: metadata.json
documentation/projects/f712c7f2-180b-4362-bb76-98a19ea4f55a/files/: main.tex  metadata.json
documentation/reports/: README.md
documentation/tasks/: Login_4.md  RBAC_5.md  Registration_3.md  opus-5.md
field-validator/: Cargo.toml
field-validator/src/: lib.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.vue  components.d.ts  main.ts  typed-router.d.ts
frontend/src/api/: client.ts  wasm-types.ts  wasmLoader.ts
frontend/src/components/: AppFooter.vue  UserLogin.vue  UserRegistration.vue
frontend/src/components/auth/: AuthFormLayout.vue  AuthSubmitButton.vue  ConfirmPasswordField.vue  EmailField.vue  ForgotPasswordLink.vue  PasswordField.vue  README.md  RememberMeCheckbox.vue  StatusMessage.vue  UsernameField.vue  auth.css
frontend/src/layouts/: default.vue
frontend/src/pages/: account.vue  dashboard.vue  forgot-password.vue  index.vue  login.vue  register.vue  reset-password.vue  verify-email.vue
frontend/src/pages/admin/: deleted-posts.vue  users.vue
frontend/src/pages/posts/: [id].edit.vue  [id].vue  new.vue
frontend/src/plugins/: index.ts  vuetify.ts  wasm.ts
frontend/src/router/: index.ts
frontend/src/services/: api-client.ts  api.ts  counter.ts  fieldValidator.ts  health.ts  passwordValidator.ts  wasmLoader.ts
frontend/src/services/auth/: auth.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: auth.css  main.css  settings.scss
frontend/src/utils/: constants.ts  validation.ts
frontend/src/wasm/: password-validator.d.ts  password-validator.js  password-validator_bg.wasm  password-validator_bg.wasm.d.ts
password-validator/: Cargo.toml
password-validator/src/: lib.rs
proto/: api.proto
proto-types/: Cargo.toml  build.rs
proto-types/src/: lib.rs
translator/: Cargo.toml
translator/locales/: en.yml
translator/src/: lib.rs
