[package]
name = "api-translator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
rust-i18n = "3.1"
field-validator = { path = "../field-validator" }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
