[package]
name = "api-types"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
tsify-next = { version = "0.5", optional = true }

[features]
default = []
openapi = ["utoipa"]
wasm = ["wasm-bindgen", "tsify-next"]
