[package]
name = "api-types"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
strum.workspace = true
utoipa = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true }

[features]
default = []
openapi = ["utoipa"]
wasm = ["wasm-bindgen", "tsify-next"]
