[package]
name = "appsec-server"
version = "0.1.0"
edition = "2024"

[dependencies]
### SHARED:
field-validator = { path = "../field-validator" }

### DB:
argon2 = { version = "0.5.3", features = ["zeroize", "std"] }
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
const_format = "0.2.35"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-async-persistent", "crypto-rust", "tokio", "vendored"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite", "time"] }
time = { version = "0.3.44", features = ["serde"] }
uuid = "1.18.1"

### AXUM_WS:
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header", "protobuf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-primitive-derive = "0.3.0"
headers = "0.4.1"
# log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_warn"] }
num-traits = "0.2.19"
strum = { version = "0.27.2", features = ["derive"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1.41", features = ["std", "max_level_debug", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }

### PROTOBUF:
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"

