[package]
name = "appsec-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace crates
api-types = { workspace = true, features = ["openapi", "sqlx"] }
field-validator.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# OpenAPI
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
headers.workspace = true
tokio-tungstenite.workspace = true

# Database
sqlx.workspace = true
libsqlite3-sys.workspace = true

# Cryptography
argon2.workspace = true
sha2.workspace = true
hex.workspace = true
rand_core.workspace = true

# System
keyring.workspace = true
config.workspace = true

# Utilities
time.workspace = true
uuid.workspace = true
anyhow.workspace = true
konst.workspace = true
const_format.workspace = true
num-traits.workspace = true
enum-primitive-derive.workspace = true
strum.workspace = true
lettre = { workspace = true, features = ["builder", "tokio1-rustls", "smtp-transport", "tokio1-native-tls", "rustls-native-certs", "ring", "rustls-tls"] }
mime_guess.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
