[package]
name = "memeshark"
version = "0.1.0"
authors = ["kamo104 <kamo.gabo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
tracing = "0.1"
field-validator = { path = "../field-validator" }
const_format = "0.2"
hex = "0.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
sha2 = "0.10"
time = { version = "0.3", features = ["serde", "wasm-bindgen"] }
getrandom = { version = "0.2", optional = true }

# Server-side dependencies
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite", "time"], optional = true }
argon2 = { version = "0.5.3", features = ["zeroize", "std"], optional = true }
lettre = { version = "0.11", optional = true, default-features = false, features = ["tokio1", "smtp-transport", "builder"] }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
validator = { version = "0.16", features = ["derive"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-async-persistent", "crypto-rust", "tokio", "vendored"], optional = true }
tower-cookies = { version = "0.11.0", features = ["private", "signed"], optional = true }
axum = { version = "0.8.6", features = ["ws", "macros"], optional = true }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "getrandom/js"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:sqlx", "dep:argon2", "dep:lettre", "dep:tokio", "dep:tracing-subscriber", "dep:keyring", "dep:tower-cookies", "dep:axum", "dep:libsqlite3-sys"]
