[package]
name = "field-validator"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api-types.workspace = true
serde.workspace = true
serde_json.workspace = true
lettre.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "api-types/wasm"]
