[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "3.1"
field-validator = { path = "../field-validator" }
api-types = { path = "../api-types" }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
