[package]
name = "translator"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api-types.workspace = true
field-validator.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-i18n.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]
